--- a/about.html
+++ b/about.html
@@ -224,6 +224,7 @@
     <div class="menu" id="menu">
         <a href="index.html">🏠 Ana Sayfa</a>
         <a href="about.html">ℹ️ Hakkımızda</a>
+        <a href="dino-game.html">🎮 Oyun</a>
     </div>
 
     <!-- Overlay -->
