--- a/index.html
+++ b/index.html
@@ -394,7 +394,11 @@
         }
 
         // Sayaç başlat
-        updateCounter();
+git add .
+git commit -m "kesin guncelleme"
+git push origin main --force
+
+updateCounter();
     </script>
 
     <!-- Dino Oyunu -->
