Mobil iyileştirmeler: background ortala, oyun gizle/göster, canvas-only tap, dino-game touch desteği

--- a/dino-game.html
+++ b/dino-game.html
@@ -525,16 +525,33 @@
             }
         });
 
-        // Mobil tap kontrolü
-        canvas.addEventListener('click', () => {
-            if (gameRunning && !gamePaused) {
-                if (!dino.jumping) {
-                    dino.jumping = true;
-                    dino.velocityY = 15;
-                    playSound('jump');
+        // Mobil ve masaüstü kontrolü
+        const isMobile = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
+
+        if (isMobile) {
+            // Mobilde canvas'a touch basınca zıplasın
+            canvas.addEventListener('touchstart', (e) => {
+                e.preventDefault();
+                if (gameRunning && !gamePaused) {
+                    if (!dino.jumping) {
+                        dino.jumping = true;
+                        dino.velocityY = 15;
+                        playSound('jump');
+                    }
                 }
-            }
-        });
+            }, { passive: false });
+        } else {
+            // Masaüstünde click
+            canvas.addEventListener('click', () => {
+                if (gameRunning && !gamePaused) {
+                    if (!dino.jumping) {
+                        dino.jumping = true;
+                        dino.velocityY = 15;
+                        playSound('jump');
+                    }
+                }
+            });
+        }
 
         // Ses efektleri (opsiyonel - Web Audio API)
         function playSound(type) {
