--- a/index.html
+++ b/index.html
@@ -101,6 +101,16 @@
             font-size: 16px;
         }
 
+        .menu a:nth-child(3) {
+            display: none;
+        }
+
+        @media (min-width: 769px) {
+            .menu a:nth-child(3) {
+                display: block;
+            }
+        }
+
         .menu a:hover {
             background: rgba(255, 255, 255, 0.2);
             padding-left: 25px;
@@ -169,6 +179,9 @@
             margin-bottom: 20px;
             font-family: 'Poppins', sans-serif;
             font-weight: 800;
+            text-align: center;
+            word-wrap: break-word;
+            overflow-wrap: break-word;
         }
 
         p {
@@ -238,9 +251,7 @@
 
         @media (max-width: 768px) {
             body {
-                padding-bottom: 200px;
-                justify-content: flex-start;
-                padding-top: 70px;
+                background-position: center center;
             }
 
             .container {
@@ -272,6 +283,14 @@
             .social-icon img {
                 width: 25px;
                 height: 25px;
+            }
+
+            #gameContainer {
+                display: none !important;
+            }
+
+            #showGameBtn {
+                display: none !important;
             }
         }
 
@@ -458,6 +477,23 @@
         const canvas = document.getElementById('dinoGame');
         const ctx = canvas.getContext('2d');
         const gameContainer = document.getElementById('gameContainer');
+        const showGameBtn = document.getElementById('showGameBtn');
+        const hideGameBtn = document.getElementById('hideGameBtn');
+
+        // Oyun göster/gizle kontrolleri
+        if (showGameBtn) {
+            showGameBtn.addEventListener('click', () => {
+                gameContainer.style.display = 'block';
+                showGameBtn.style.display = 'none';
+            });
+        }
+
+        if (hideGameBtn) {
+            hideGameBtn.addEventListener('click', () => {
+                gameContainer.style.display = 'none';
+                showGameBtn.style.display = 'block';
+            });
+        }
 
         let score = 0;
         let gameSpeed = 6;
@@ -666,5 +702,163 @@
         // Oyunu başlat
         gameLoop();
     </script>
-</body>
-</html>
+
+    <!-- MOBİL DİNAZOR OYUNU -->
+    <div id="mobileGameContainer" style="position: fixed; bottom: 0; left: 0; right: 0; background: rgba(0, 0, 0, 0.85); padding: 10px; text-align: center; z-index: 999; display: none; flex-direction: column; align-items: center; justify-content: center;">
+        <button id="closeMobileGame" style="position: absolute; top: 10px; right: 15px; background: rgba(255,255,255,0.3); border: 1px solid white; color: white; padding: 6px 12px; border-radius: 5px; cursor: pointer; font-weight: bold; font-size: 16px;">✕</button>
+        <p style="color: white; font-size: 13px; margin-bottom: 8px; margin-top: 10px; font-weight: bold;">📱 Mobil Dinazor - Dokunarak Oyna!</p>
+        <canvas id="mobileGameCanvas" width="300" height="200" style="background: linear-gradient(to bottom, #87CEEB, #E0F6FF); border-radius: 5px; display: block; margin: 0 auto; border: 2px solid rgba(255,255,255,0.3);"></canvas>
+        <p id="mobileScore" style="color: #4ade80; font-size: 14px; font-weight: bold; margin-top: 8px;">Puan: 0</p>
+    </div>
+
+    <!-- MOBİL OYUN BUTONU -->
+    <div id="openMobileGameBtn" style="position: fixed; bottom: 15px; left: 50%; transform: translateX(-50%); z-index: 1001; background: linear-gradient(135deg, #ec4899, #db2777); color: white; padding: 12px 25px; border: none; border-radius: 25px; cursor: pointer; font-weight: bold; font-size: 13px; box-shadow: 0 4px 15px rgba(236, 72, 153, 0.4); transition: all 0.3s ease; display: none;">
+        📱 Mobil Oyun
+    </div>
+
+    <script>
+        // MOBİL OYUN KONTROLLERI
+        const isMobileDevice = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
+        const mobileGameContainer = document.getElementById('mobileGameContainer');
+        const openMobileGameBtn = document.getElementById('openMobileGameBtn');
+        const closeMobileGame = document.getElementById('closeMobileGame');
+        const mobileCanvas = document.getElementById('mobileGameCanvas');
+        const mobilectx = mobileCanvas.getContext('2d');
+
+        // Mobil cihazda oyun göster
+        if (isMobileDevice) {
+            openMobileGameBtn.style.display = 'block';
+            // Desktop oyununu gizle
+            if (showGameBtn) showGameBtn.style.display = 'none';
+        }
+
+        openMobileGameBtn.addEventListener('click', () => {
+            mobileGameContainer.style.display = 'flex';
+            openMobileGameBtn.style.display = 'none';
+            startMobileGame();
+        });
+
+        closeMobileGame.addEventListener('click', () => {
+            mobileGameContainer.style.display = 'none';
+            openMobileGameBtn.style.display = 'block';
+        });
+
+        // MOBİL OYUN LOJİĞİ
+        let mobileGameRunning = false;
+        let mobileDino = {
+            x: 30,
+            y: mobileCanvas.height - 50,
+            width: 30,
+            height: 40,
+            velocityY: 0,
+            jumping: false
+        };
+
+        let mobileObstacles = [];
+        let mobileScore = 0;
+        let mobileGameSpeed = 4;
+        let mobileObstacleTimer = 0;
+
+        function startMobileGame() {
+            mobileGameRunning = true;
+            mobileScore = 0;
+            mobileGameSpeed = 4;
+            mobileObstacles = [];
+            mobileDino.y = mobileCanvas.height - 50;
+            mobileDino.jumping = false;
+            document.getElementById('mobileScore').innerText = 'Puan: 0';
+            mobilGameLoop();
+        }
+
+        function mobilGameLoop() {
+            if (!mobileGameRunning) return;
+
+            // Arka plan
+            mobilectx.fillStyle = '#E0F6FF';
+            mobilectx.fillRect(0, 0, mobileCanvas.width, mobileCanvas.height);
+            mobilectx.fillStyle = '#87CEEB';
+            mobilectx.fillRect(0, 0, mobileCanvas.width, mobileCanvas.height / 2);
+
+            // Zemin
+            mobilectx.strokeStyle = '#333';
+            mobilectx.lineWidth = 2;
+            mobilectx.beginPath();
+            mobilectx.moveTo(0, mobileCanvas.height - 10);
+            mobilectx.lineTo(mobileCanvas.width, mobileCanvas.height - 10);
+            mobilectx.stroke();
+
+            // Dinazor güncelle
+            if (mobileDino.jumping) {
+                mobileDino.velocityY += 0.5;
+                mobileDino.y += mobileDino.velocityY;
+
+                if (mobileDino.y >= mobileCanvas.height - 50) {
+                    mobileDino.y = mobileCanvas.height - 50;
+                    mobileDino.jumping = false;
+                    mobileDino.velocityY = 0;
+                }
+            }
+
+            // Dinazor çiz
+            mobilectx.fillStyle = '#4CAF50';
+            mobilectx.fillRect(mobileDino.x, mobileDino.y, mobileDino.width, mobileDino.height);
+            mobilectx.fillStyle = 'white';
+            mobilectx.fillRect(mobileDino.x + 8, mobileDino.y + 5, 6, 6);
+
+            // Engeller ekle
+            mobileObstacleTimer++;
+            if (mobileObstacleTimer > 80 - Math.floor(mobileScore / 50)) {
+                mobileObstacles.push({
+                    x: mobileCanvas.width,
+                    y: mobileCanvas.height - 30,
+                    width: 15,
+                    height: 25
+                });
+                mobileObstacleTimer = 0;
+            }
+
+            // Engelleri güncelle ve çiz
+            for (let i = mobileObstacles.length - 1; i >= 0; i--) {
+                let obs = mobileObstacles[i];
+                obs.x -= mobileGameSpeed;
+
+                mobilectx.fillStyle = '#FF6B6B';
+                mobilectx.fillRect(obs.x, obs.y, obs.width, obs.height);
+
+                // Çarpışma kontrolü
+                if (obs.x < mobileDino.x + mobileDino.width &&
+                    obs.x + obs.width > mobileDino.x &&
+                    obs.y < mobileDino.y + mobileDino.height &&
+                    obs.y + obs.height > mobileDino.y) {
+                    mobileGameRunning = false;
+                    mobilectx.fillStyle = 'rgba(0,0,0,0.5)';
+                    mobilectx.fillRect(0, 0, mobileCanvas.width, mobileCanvas.height);
+                    mobilectx.fillStyle = 'white';
+                    mobilectx.font = 'bold 16px Arial';
+                    mobilectx.textAlign = 'center';
+                    mobilectx.fillText('OYUN BİTTİ!', mobileCanvas.width / 2, mobileCanvas.height / 2 - 20);
+                    mobilectx.font = '12px Arial';
+                    mobilectx.fillText('Puanınız: ' + mobileScore, mobileCanvas.width / 2, mobileCanvas.height / 2 + 10);
+                    return;
+                }
+
+                if (obs.x + obs.width < 0) {
+                    mobileObstacles.splice(i, 1);
+                    mobileScore++;
+                    if (mobileScore % 50 === 0) mobileGameSpeed += 0.3;
+                    document.getElementById('mobileScore').innerText = 'Puan: ' + mobileScore;
+                }
+            }
+
+            requestAnimationFrame(mobilGameLoop);
+        }
+
+        // Mobil oyun kontrolleri
+        mobileCanvas.addEventListener('touchstart', (e) => {
+            e.preventDefault();
+            if (mobileGameRunning && !mobileDino.jumping) {
+                mobileDino.velocityY = -10;
+                mobileDino.jumping = true;
+            }
+        }, { passive: false });
+    </script>
