--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
     <div class="menu" id="menu">
         <a href="index.html">🏠 Ana Sayfa</a>
         <a href="about.html">ℹ️ Hakkımızda</a>
-        <a href="dino-game.html">🎮 Oyun</a>
+        <a href="ai-tools.html" style="color: #ffc107; font-weight: bold;">🎨 AI Araçları</a>
     </div>
 
     <!-- Overlay -->
@@ -369,6 +369,11 @@
         </div>
         
         <p style="font-size: 14px; line-height: 1.8; max-width: 400px; margin: 0 auto; margin-bottom: 30px;">1 Ocak 2026'da geliştirilmeye başlandı. Size en iyi ve yakın verimi sunmak için çaba gösteriyoruz. Çok yakında Döner AI, tüm dünyada hizmet verecek.</p>
+
+        <!-- Prompt To Image Butonu -->
+        <button onclick="window.location.href='ai-tools.html'" style="background: linear-gradient(135deg, #9f7aea, #805ad5); color: white; padding: 15px 40px; border: none; border-radius: 50px; font-size: 18px; font-weight: bold; cursor: pointer; transition: all 0.3s ease; box-shadow: 0 5px 15px rgba(159, 122, 234, 0.4); margin-bottom: 25px;">
+            🎨 Döner AI Prompt To Image
+        </button>
 
         <!-- Sosyal Medya Footer -->
         <div class="social-footer">
@@ -458,407 +463,4 @@
                 calculateTime();
             }
         });
-    </script>
-
-    <!-- Oyunu Göster Butonu -->
-    <div id="showGameBtn" style="position: fixed; bottom: 10px; left: 50%; transform: translateX(-50%); z-index: 1001; background: linear-gradient(135deg, #22c55e, #16a34a); color: white; padding: 12px 30px; border: none; border-radius: 25px; cursor: pointer; font-weight: bold; font-size: 14px; box-shadow: 0 4px 15px rgba(34, 197, 94, 0.4); transition: all 0.3s ease;">
-        🎮 Oyunu Göster
-    </div>
-
-    <!-- Dino Oyunu -->
-    <div id="gameContainer" style="position: fixed; bottom: 0; left: 0; right: 0; background: rgba(0, 0, 0, 0.8); padding: 10px; text-align: center; z-index: 999; display: none;">
-        <button id="hideGameBtn" style="position: absolute; top: 5px; right: 10px; background: rgba(255,255,255,0.2); border: 1px solid white; color: white; padding: 5px 10px; border-radius: 5px; cursor: pointer; font-weight: bold;">✕</button>
-        <p style="color: white; font-size: 12px; margin-bottom: 5px; margin-top: 15px;">Sıkılmamanız için sizin için küçük bir oyun</p>
-        <canvas id="dinoGame" width="600" height="150" style="background: #f7f7f7; border-radius: 5px; display: block; margin: 0 auto; width: 100%; max-width: 600px;"></canvas>
-        <div id="score" style="position: absolute; top: 15px; right: 20px; color: white; font-weight: bold; font-size: 16px;">Puan: 0</div>
-    </div>
-
-    <script>
-        const canvas = document.getElementById('dinoGame');
-        const ctx = canvas.getContext('2d');
-        const gameContainer = document.getElementById('gameContainer');
-        const showGameBtn = document.getElementById('showGameBtn');
-        const hideGameBtn = document.getElementById('hideGameBtn');
-
-        // Oyun göster/gizle kontrolleri
-        if (showGameBtn) {
-            showGameBtn.addEventListener('click', () => {
-                gameContainer.style.display = 'block';
-                showGameBtn.style.display = 'none';
-            });
-        }
-
-        if (hideGameBtn) {
-            hideGameBtn.addEventListener('click', () => {
-                gameContainer.style.display = 'none';
-                showGameBtn.style.display = 'block';
-            });
-        }
-
-        let score = 0;
-        let gameSpeed = 6;
-        let gameOver = false;
-        let isJumping = false;
-        let gravity = 0.6;
-        let jumpPower = 0;
-        let isDay = true;
-        let frameCount = 0;
-        let isMobile = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
-
-        // Dino
-        const dino = {
-            x: 50,
-            y: canvas.height - 60,
-            width: 40,
-            height: 50,
-            velocityY: 0,
-            jump: function() {
-                if (!isJumping && !gameOver) {
-                    this.velocityY = -12;
-                    isJumping = true;
-                }
-            },
-            update: function() {
-                this.velocityY += gravity;
-                this.y += this.velocityY;
-
-                if (this.y > canvas.height - 60) {
-                    this.y = canvas.height - 60;
-                    this.velocityY = 0;
-                    isJumping = false;
-                }
-            },
-            draw: function() {
-                ctx.fillStyle = '#535353';
-                // Gövde
-                ctx.fillRect(this.x, this.y, this.width, this.height);
-                // Baş
-                ctx.fillRect(this.x + 10, this.y - 15, 25, 20);
-                // Göz
-                ctx.fillStyle = 'white';
-                ctx.fillRect(this.x + 25, this.y - 10, 5, 5);
-                // Bacaklar
-                ctx.fillStyle = '#535353';
-                ctx.fillRect(this.x + 5, this.y + this.height, 8, 10);
-                ctx.fillRect(this.x + 25, this.y + this.height, 8, 10);
-            }
-        };
-
-        // Engeller
-        let obstacles = [];
-        let obstacleTimer = 0;
-
-        function createObstacle() {
-            const type = Math.random() > 0.5 ? 'cactus' : 'bird';
-            const obstacle = {
-                x: canvas.width,
-                y: type === 'cactus' ? canvas.height - 50 : canvas.height - 90,
-                width: type === 'cactus' ? 20 : 35,
-                height: type === 'cactus' ? 40 : 25,
-                type: type
-            };
-            obstacles.push(obstacle);
-        }
-
-        function updateObstacles() {
-            obstacleTimer++;
-            if (obstacleTimer > 100 - Math.floor(score / 100)) {
-                createObstacle();
-                obstacleTimer = 0;
-            }
-
-            obstacles.forEach((obstacle, index) => {
-                obstacle.x -= gameSpeed;
-
-                if (obstacle.x + obstacle.width < 0) {
-                    obstacles.splice(index, 1);
-                    score++;
-                    document.getElementById('score').innerText = 'Puan: ' + score;
-                    
-                    // Hız artışı
-                    if (score % 100 === 0) {
-                        gameSpeed += 0.5;
-                    }
-                }
-
-                // Çarpışma kontrolü
-                if (obstacle.x < dino.x + dino.width &&
-                    obstacle.x + obstacle.width > dino.x &&
-                    obstacle.y < dino.y + dino.height &&
-                    obstacle.y + obstacle.height > dino.y) {
-                    gameOver = true;
-                }
-            });
-        }
-
-        function drawObstacles() {
-            obstacles.forEach(obstacle => {
-                ctx.fillStyle = '#535353';
-                if (obstacle.type === 'cactus') {
-                    // Kaktüs
-                    ctx.fillRect(obstacle.x, obstacle.y, obstacle.width, obstacle.height);
-                    ctx.fillRect(obstacle.x - 5, obstacle.y + 10, 10, 15);
-                    ctx.fillRect(obstacle.x + 15, obstacle.y + 10, 10, 15);
-                } else {
-                    // Kuş
-                    ctx.fillRect(obstacle.x, obstacle.y, obstacle.width, obstacle.height);
-                    // Kanatlar
-                    ctx.fillRect(obstacle.x - 5, obstacle.y + 8, 15, 3);
-                    ctx.fillRect(obstacle.x + 25, obstacle.y + 8, 15, 3);
-                }
-            });
-        }
-
-        // Gece/Gündüz değişimi
-        function updateBackground() {
-            frameCount++;
-            if (score > 0 && score % 200 === 0 && frameCount % 60 === 0) {
-                isDay = !isDay;
-            }
-            ctx.fillStyle = isDay ? '#f7f7f7' : '#2b2b2b';
-            ctx.fillRect(0, 0, canvas.width, canvas.height);
-        }
-
-        // Zemin
-        function drawGround() {
-            ctx.strokeStyle = isDay ? '#535353' : '#b0b0b0';
-            ctx.lineWidth = 2;
-            ctx.beginPath();
-            ctx.moveTo(0, canvas.height - 10);
-            ctx.lineTo(canvas.width, canvas.height - 10);
-            ctx.stroke();
-        }
-
-        function gameLoop() {
-            if (!gameOver) {
-                updateBackground();
-                drawGround();
-                dino.update();
-                dino.draw();
-                updateObstacles();
-                drawObstacles();
-                requestAnimationFrame(gameLoop);
-            } else {
-                ctx.fillStyle = 'rgba(0, 0, 0, 0.5)';
-                ctx.fillRect(0, 0, canvas.width, canvas.height);
-                ctx.fillStyle = 'white';
-                ctx.font = '30px Arial';
-                ctx.textAlign = 'center';
-                ctx.fillText('OYUN BİTTİ!', canvas.width / 2, canvas.height / 2 - 20);
-                ctx.font = '16px Arial';
-                ctx.fillText('Puanınız: ' + score, canvas.width / 2, canvas.height / 2 + 10);
-                ctx.fillText('Tekrar başlamak için tıklayın', canvas.width / 2, canvas.height / 2 + 40);
-            }
-        }
-
-        function resetGame() {
-            score = 0;
-            gameSpeed = 6;
-            gameOver = false;
-            isJumping = false;
-            obstacles = [];
-            obstacleTimer = 0;
-            dino.y = canvas.height - 60;
-            dino.velocityY = 0;
-            isDay = true;
-            frameCount = 0;
-            document.getElementById('score').innerText = 'Puan: 0';
-            gameLoop();
-        }
-
-        // Kontroller - Mobil ve Masaüstü desteği
-        if (isMobile) {
-            // Mobilde SADECE canvas'a basınca zıpla
-            canvas.addEventListener('touchstart', (e) => {
-                e.preventDefault();
-                if (gameOver) {
-                    resetGame();
-                } else {
-                    dino.jump();
-                }
-            }, { passive: false });
-        } else {
-            // Masaüstünde canvas'a click
-            canvas.addEventListener('click', (e) => {
-                if (gameOver) {
-                    resetGame();
-                } else {
-                    dino.jump();
-                }
-            });
-        }
-
-        document.addEventListener('keydown', (e) => {
-            if (e.code === 'Space' || e.code === 'ArrowUp') {
-                e.preventDefault();
-                if (gameOver) {
-                    resetGame();
-                } else {
-                    dino.jump();
-                }
-            }
-        });
-
-        // Oyunu başlat
-        gameLoop();
-    </script>
-
-    <!-- MOBİL DİNAZOR OYUNU -->
-    <div id="mobileGameContainer" style="position: fixed; bottom: 0; left: 0; right: 0; background: rgba(0, 0, 0, 0.85); padding: 10px; text-align: center; z-index: 999; display: none; flex-direction: column; align-items: center; justify-content: center;">
-        <button id="closeMobileGame" style="position: absolute; top: 10px; right: 15px; background: rgba(255,255,255,0.3); border: 1px solid white; color: white; padding: 6px 12px; border-radius: 5px; cursor: pointer; font-weight: bold; font-size: 16px;">✕</button>
-        <p style="color: white; font-size: 13px; margin-bottom: 8px; margin-top: 10px; font-weight: bold;">📱 Mobil Dinazor - Dokunarak Oyna!</p>
-        <canvas id="mobileGameCanvas" width="300" height="200" style="background: linear-gradient(to bottom, #87CEEB, #E0F6FF); border-radius: 5px; display: block; margin: 0 auto; border: 2px solid rgba(255,255,255,0.3);"></canvas>
-        <p id="mobileScore" style="color: #4ade80; font-size: 14px; font-weight: bold; margin-top: 8px;">Puan: 0</p>
-    </div>
-
-    <!-- MOBİL OYUN BUTONU -->
-    <div id="openMobileGameBtn" style="position: fixed; bottom: 15px; left: 50%; transform: translateX(-50%); z-index: 1001; background: linear-gradient(135deg, #ec4899, #db2777); color: white; padding: 12px 25px; border: none; border-radius: 25px; cursor: pointer; font-weight: bold; font-size: 13px; box-shadow: 0 4px 15px rgba(236, 72, 153, 0.4); transition: all 0.3s ease; display: none;">
-        📱 Mobil Oyun
-    </div>
-
-    <script>
-        // MOBİL OYUN KONTROLLERI
-        const isMobileDevice = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
-        const mobileGameContainer = document.getElementById('mobileGameContainer');
-        const openMobileGameBtn = document.getElementById('openMobileGameBtn');
-        const closeMobileGame = document.getElementById('closeMobileGame');
-        const mobileCanvas = document.getElementById('mobileGameCanvas');
-        const mobilectx = mobileCanvas.getContext('2d');
-
-        // Mobil cihazda oyun göster
-        if (isMobileDevice) {
-            openMobileGameBtn.style.display = 'block';
-            // Desktop oyununu gizle
-            if (showGameBtn) showGameBtn.style.display = 'none';
-        }
-
-        openMobileGameBtn.addEventListener('click', () => {
-            mobileGameContainer.style.display = 'flex';
-            openMobileGameBtn.style.display = 'none';
-            startMobileGame();
-        });
-
-        closeMobileGame.addEventListener('click', () => {
-            mobileGameContainer.style.display = 'none';
-            openMobileGameBtn.style.display = 'block';
-        });
-
-        // MOBİL OYUN LOJİĞİ
-        let mobileGameRunning = false;
-        let mobileDino = {
-            x: 30,
-            y: mobileCanvas.height - 50,
-            width: 30,
-            height: 40,
-            velocityY: 0,
-            jumping: false
-        };
-
-        let mobileObstacles = [];
-        let mobileScore = 0;
-        let mobileGameSpeed = 4;
-        let mobileObstacleTimer = 0;
-
-        function startMobileGame() {
-            mobileGameRunning = true;
-            mobileScore = 0;
-            mobileGameSpeed = 4;
-            mobileObstacles = [];
-            mobileDino.y = mobileCanvas.height - 50;
-            mobileDino.jumping = false;
-            document.getElementById('mobileScore').innerText = 'Puan: 0';
-            mobilGameLoop();
-        }
-
-        function mobilGameLoop() {
-            if (!mobileGameRunning) return;
-
-            // Arka plan
-            mobilectx.fillStyle = '#E0F6FF';
-            mobilectx.fillRect(0, 0, mobileCanvas.width, mobileCanvas.height);
-            mobilectx.fillStyle = '#87CEEB';
-            mobilectx.fillRect(0, 0, mobileCanvas.width, mobileCanvas.height / 2);
-
-            // Zemin
-            mobilectx.strokeStyle = '#333';
-            mobilectx.lineWidth = 2;
-            mobilectx.beginPath();
-            mobilectx.moveTo(0, mobileCanvas.height - 10);
-            mobilectx.lineTo(mobileCanvas.width, mobileCanvas.height - 10);
-            mobilectx.stroke();
-
-            // Dinazor güncelle
-            if (mobileDino.jumping) {
-                mobileDino.velocityY += 0.5;
-                mobileDino.y += mobileDino.velocityY;
-
-                if (mobileDino.y >= mobileCanvas.height - 50) {
-                    mobileDino.y = mobileCanvas.height - 50;
-                    mobileDino.jumping = false;
-                    mobileDino.velocityY = 0;
-                }
-            }
-
-            // Dinazor çiz
-            mobilectx.fillStyle = '#4CAF50';
-            mobilectx.fillRect(mobileDino.x, mobileDino.y, mobileDino.width, mobileDino.height);
-            mobilectx.fillStyle = 'white';
-            mobilectx.fillRect(mobileDino.x + 8, mobileDino.y + 5, 6, 6);
-
-            // Engeller ekle
-            mobileObstacleTimer++;
-            if (mobileObstacleTimer > 80 - Math.floor(mobileScore / 50)) {
-                mobileObstacles.push({
-                    x: mobileCanvas.width,
-                    y: mobileCanvas.height - 30,
-                    width: 15,
-                    height: 25
-                });
-                mobileObstacleTimer = 0;
-            }
-
-            // Engelleri güncelle ve çiz
-            for (let i = mobileObstacles.length - 1; i >= 0; i--) {
-                let obs = mobileObstacles[i];
-                obs.x -= mobileGameSpeed;
-
-                mobilectx.fillStyle = '#FF6B6B';
-                mobilectx.fillRect(obs.x, obs.y, obs.width, obs.height);
-
-                // Çarpışma kontrolü
-                if (obs.x < mobileDino.x + mobileDino.width &&
-                    obs.x + obs.width > mobileDino.x &&
-                    obs.y < mobileDino.y + mobileDino.height &&
-                    obs.y + obs.height > mobileDino.y) {
-                    mobileGameRunning = false;
-                    mobilectx.fillStyle = 'rgba(0,0,0,0.5)';
-                    mobilectx.fillRect(0, 0, mobileCanvas.width, mobileCanvas.height);
-                    mobilectx.fillStyle = 'white';
-                    mobilectx.font = 'bold 16px Arial';
-                    mobilectx.textAlign = 'center';
-                    mobilectx.fillText('OYUN BİTTİ!', mobileCanvas.width / 2, mobileCanvas.height / 2 - 20);
-                    mobilectx.font = '12px Arial';
-                    mobilectx.fillText('Puanınız: ' + mobileScore, mobileCanvas.width / 2, mobileCanvas.height / 2 + 10);
-                    return;
-                }
-
-                if (obs.x + obs.width < 0) {
-                    mobileObstacles.splice(i, 1);
-                    mobileScore++;
-                    if (mobileScore % 50 === 0) mobileGameSpeed += 0.3;
-                    document.getElementById('mobileScore').innerText = 'Puan: ' + mobileScore;
-                }
-            }
-
-            requestAnimationFrame(mobilGameLoop);
-        }
-
-        // Mobil oyun kontrolleri
-        mobileCanvas.addEventListener('touchstart', (e) => {
-            e.preventDefault();
-            if (mobileGameRunning && !mobileDino.jumping) {
-                mobileDino.velocityY = -10;
-                mobileDino.jumping = true;
-            }
-        }, { passive: false });
     </script>
